began gridwork of applications by adding col and row in work section. Footer section has disappeared behind cards. Need to fix for next commit.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -20,8 +20,17 @@ main {
     margin: 2%;
 }
 
+/* set a max height for cards */
 .card img {
-    height: 25em;
+    max-width: 100%;
+    height: auto;
 }
 
+/* set a top margin for cards */
+.card {
+    margin-top: 2%;
+}
 
+.row {
+    height: 20em;
+}
